--- a/index.html
+++ b/index.html
@@ -79,5 +79,6 @@
     <div id="countries" class="options"></div>
     <div id="bgOverlay"></div>
     <script src="src/index.js"></script>
+    <script src="src/styles.css"></script>
   </body>
 </html>
