--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css"
     />
+    <link rel="stylesheet" type="text/css" href="src/styles.css">
   </head>
 
   <body>
@@ -79,6 +80,5 @@
     <div id="countries" class="options"></div>
     <div id="bgOverlay"></div>
     <script src="src/index.js"></script>
-    <script src="src/styles.css"></script>
   </body>
 </html>
