--- a/index.html
+++ b/index.html
@@ -80,5 +80,9 @@
     <div id="countries" class="options"></div>
     <div id="bgOverlay"></div>
     <script src="src/index.js"></script>
+    <script src="src/autocomplete.js"></script>
+    <script src="src/countries.js"></script>
+    <script src="src/bias_controller.js"></script>
+    <script src="src/environment_select.js"></script>
   </body>
 </html>
