--- a/index.html
+++ b/index.html
@@ -84,5 +84,6 @@
     <script src="src/countries.js"></script>
     <script src="src/bias_controller.js"></script>
     <script src="src/environment_select.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   </body>
 </html>
