--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
     </div>
     <div id="countries" class="options"></div>
     <div id="bgOverlay"></div>
-    <script src="src/index.js"></script>
-    <script src="src/autocomplete.js"></script>
-    <script src="src/countries.js"></script>
-    <script src="src/bias_controller.js"></script>
-    <script src="src/environment_select.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script type="module" src="src/index.js"></script>
+    <script type="module" src="src/autocomplete.js"></script>
+    <script type="module" src="src/countries.js"></script>
+    <script type="module" src="src/bias_controller.js"></script>
+    <script type="module" src="src/environment_select.js"></script>
+    <script type="module" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   </body>
 </html>
