--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css"
     />
     <link rel="stylesheet" type="text/css" href="src/styles.css">
-
+    <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+    integrity="sha512-KyZXEAg3QhqLMpG8r+Knujsl5+5hb7V4hYDQ1BO1E5F5pX3Y74k5qVVjZ2S8D4kI9IkK2UrdQs2ks+DC9EXgFw=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  ></script>
     <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.15.2/css/selectize.default.min.css"
@@ -98,6 +103,5 @@
     <script type="module" src="src/countries.js"></script>
     <script type="module" src="src/bias_controller.js"></script>
     <script type="module" src="src/environment_select.js"></script>
-    <script type="module" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   </body>
 </html>
