--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.6/css/selectize.css"
     />
-
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css"
@@ -79,7 +79,6 @@
     </div>
     <div id="countries" class="options"></div>
     <div id="bgOverlay"></div>
-    <script type="module" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.15.2/css/selectize.default.min.css"
