--- a/index.html
+++ b/index.html
@@ -81,19 +81,16 @@
 
   <!-- jQuery -->
   <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-    integrity="sha512-KyZXEAg3QhqLMpG8r+Knujsl5+5hb7V4hYDQ1BO1E5F5pX3Y74k5qVVjZ2S8D4kI9IkK2UrdQs2ks+DC9EXgFw=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
+    src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"
   ></script>
 
   <!-- Selectize JS -->
   <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.15.2/js/standalone/selectize.min.js"
-    integrity="sha512-IOebNkvA/HZjMM7MxL0NYeLYEalloZ8ckak+NDtOViP7oiYzG5vn6WVXyrJDiJPhl4yRdmNAG49iuLmhkUdVsQ=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  ></script>
+  src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.15.2/js/selectize.min.js"
+  integrity="sha512-IOebNkvA/HZjMM7MxL0NYeLYEalloZ8ckak+NDtOViP7oiYzG5vn6WVXyrJDiJPhl4yRdmNAG49iuLmhkUdVsQ=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+></script>
 
     <script type="module" src="src/index.js"></script>
     <script type="module" src="src/autocomplete.js"></script>
