--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <option value="tourist_attraction">Tourist Attraction</option>
           <option value="amusement_park">Amusement Park</option>
           <option value="admin_level">Admin Level</option>
-        </select>
+        </select>  
         <label class="bold">Geographic bias</label>
         <div>
           <input type="checkbox" id="bias-checkbox" name="bias" value="bias"/>
@@ -58,6 +58,11 @@
           <input id="bias-location-input" type="text"placeholder="Bias coordinates"/>
           <label for="bias-location-label" for="bias-radius-input" class="bold">Radius</label>
           <input id="bias-radius-input" type="text"placeholder="Bias radius"/>
+        </div>
+        <label class="bold">Additional parameters</label>
+        <div>
+          <input type="checkbox" id="extended-checkbox" name="extended" value="extended"/>
+          <label for="extended">Extended postal codes</label>
         </div>
       </div>
 
