--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
           <option value="prod">Production</span></option>
           <option value="pr" id="pr-deploy">PR deploy</option>
         </select>
+        <select id="endpoint-select">
+          <option value="">Select an endpoint...</option>
+          <option selected value="autocomplete">Autocomplete/Details</option>
+          <option value="search">Search/Details</span></option>
+          <option value="geocode">Geocode</option>
+        </select>
         <label class="bold" for="components-select">Components: </label>
         <div id="active-restrictions">No active restrictions...</div>
         <div class="multiselect">
