--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <option value="tourist_attraction">Tourist Attraction</option>
           <option value="amusement_park">Amusement Park</option>
           <option value="admin_level">Admin Level</option>
+          <option value="point_of_interest">POI</option>
         </select>  
         <label class="bold">Geographic bias</label>
         <div>
