--- a/index.html
+++ b/index.html
@@ -83,8 +83,17 @@
             placeholder="Search an Address..."
           />
         </div>
-        <div class="autocomplete-results-container">
-          <div class="autocomplete-results"></div>
+        <div class="autocomplete-results-wrapper">
+          <div class="autocomplete-results-container">
+            <div class="autocomplete-results">
+              <!-- Résultats ici -->
+            </div>
+          </div>
+          <div class="autocomplete-results-container">
+            <div class="autocomplete-results">
+              <!-- Résultats ici aussi -->
+            </div>
+          </div>
         </div>
       </div>
     </div>
