--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
           </div>
           <div class="autocomplete-results-container">
-            <div class="autocomplete-results">
+            <div class="autocomplete-results-compare">
               <!-- Résultats ici aussi -->
             </div>
           </div>
