--- a/index.html
+++ b/index.html
@@ -85,11 +85,13 @@
         </div>
         <div class="autocomplete-results-wrapper">
           <div class="autocomplete-results-container">
+            <div class="autocomplete-title">Test</div>
             <div class="autocomplete-results">
               <!-- Résultats ici -->
             </div>
           </div>
           <div class="autocomplete-results-container">
+            <div class="autocomplete-title">Production</div>
             <div class="autocomplete-results-compare">
               <!-- Résultats ici aussi -->
             </div>
