--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Woosmap Address API Autocomplete</title>
+    <title>Woosmap Localities API</title>
     <meta charset="UTF-8" />
     <link
       rel="stylesheet"
@@ -48,7 +48,7 @@
           <option value="">Select a type...</option>
           <option selected value="locality">Locality</option>
           <option value="postal_code">Postal code</option>
-          <option selected value="address">Address</option>
+          <option value="address">Address</option>
           <option value="airport">Airport</option>
           <option value="tourist_attraction">Tourist Attraction</option>
           <option value="amusement_park">Amusement Park</option>
