css: manage autocomplete list

--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
         <input id="input" autocomplete="off" type="text" placeholder="Search an Address..." />
       </div>
       <div class="autocomplete-results-container">
-        <div class="autocomplete-results">
+        <ul class="autocomplete-results">
           <!-- Résultats ici -->
-        </div>
-        <div class="autocomplete-results-compare">
+        </ul>
+        <ul class="autocomplete-results-compare">
           <!-- Résultats ici aussi -->
-        </div>
+        </ul>
       </div>
     </div>
   </div>
