--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
         <input id="input" autocomplete="off" type="text" placeholder="Search an Address..." />
       </div>
       <div class="autocomplete-results-container">
-        <ul class="autocomplete-results">
+        <ul class="suggestions-list">
           <!-- Résultats ici -->
         </ul>
-        <ul class="autocomplete-results-compare">
+        <ul class="suggestions-list-compare">
           <!-- Résultats ici aussi -->
         </ul>
       </div>
