--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
       <label class="bold">Geographic bias</label>
       <div>
         <input type="checkbox" id="bias-checkbox" name="bias" value="bias" />
-        <label for="bias">Geographic bias</label>
+        <label for="bias">Manually defined</label>
+        <label for="bias-map-center">Center of the map</label>
       </div>
       <div id="bias-params">
         <label id="bias-location-label" for="bias-location-input" class="bold">Location</label>
