--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
       <div>
         <input type="checkbox" id="bias-checkbox" name="bias" value="bias" />
         <label for="bias">Manually defined</label>
+      </div>
+      <div>
         <input type="checkbox" id="bias-map-center-checkbox" name="bias" value="bias" />
         <label for="bias-map-center">Center of the map</label>
       </div>
