--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <label for="bias">Manually defined</label>
       </div>
       <div>
-        <input type="checkbox" id="bias-map-center-checkbox" name="bias" value="bias" />
+        <input type="checkbox" id="bias-map-center-checkbox" name="bias-map-center" value="bias-map-center" />
         <label for="bias-map-center">Center of the map</label>
       </div>
       <div id="bias-params">
