feat: error modal - html

--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
   </div>
   <div id="countries" class="options"></div>
   <div id="bgOverlay"></div>
+  <div id="error-modal" class="modal hidden">
+    <div class="modal-content">
+      <span id="close-error-modal" class="close">&times;</span>
+      <h2>Erreur</h2>
+      <p id="error-message">Une erreur est survenue</p>
+    </div>
+  </div>
 
   <!-- jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
