checkbox for bias

--- a/index.html
+++ b/index.html
@@ -38,11 +38,6 @@
         <input type="checkbox" id="geometry" name="fields" value="geometry" />
         <label for="geometry">Geometry <i>only</i></label>
       </div>
-      <label class="bold">Geographical bias:</label>
-      <div>
-        <input type="checkbox" id="enableBias" name="fields" value="enableBias" />
-        <label for="enableBias">Center of the map</label>
-      </div>
       <label for="types-select" class="bold">Types:</label>
       <select id="types-select">
         <option value="">Select a type...</option>
@@ -59,6 +54,11 @@
       <div>
         <input type="checkbox" id="extended-checkbox" name="extended" value="extended" />
         <label for="extended">Extended postal codes</label>
+      </div>
+      <label class="bold">Geographical bias:</label>
+      <div>
+        <input type="checkbox" id="bias-checkbox" name="fields" value="bias" />
+        <label for="bias">Center of the map</label>
       </div>
     </div>
 
